Drop unversioned Python references from check 'scripts'.
The script interpreter /usr/bin/python is going away in Bullseye, and
possibly even sooner in unstable.

Drops unversioned Python interpreters from Lintian's checks, but does
not yet flag their use as a packaging error. Users will instead see a
more generic message similar to:

    W: unusual-interpreter files/feedparser.py #!python

This commit is part of a series originally submitted
and discussed in the following merge request:

    https://salsa.debian.org/lintian/lintian/-/merge_requests/334

Thanks to Louis-Philippe Véronneau for a draft of this change!

--- a/t/recipes/checks/scripts/scripts-control-interpreters/build-spec/debian/control.in
+++ b/t/recipes/checks/scripts/scripts-control-interpreters/build-spec/debian/control.in
@@ -41,7 +41,7 @@ Description: [% $description %] (unknown)
 
 Package: [% $source %]-python
 Architecture: [% $package_architecture %]
-Depends: python, ${shlibs:Depends}, ${misc:Depends}
+Depends: python3, ${shlibs:Depends}, ${misc:Depends}
 Description: [% $description %] (Python)
  Python control interpreters with depends.
  .
@@ -52,7 +52,7 @@ Description: [% $description %] (Python)
 
 Package: [% $source %]-prepython
 Architecture: [% $package_architecture %]
-Pre-Depends: python
+Pre-Depends: python3
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: [% $description %] (Python preinst)
  Python control interpreters with pre-depends.
