--- a/t/recipes/checks/languages/python/python-python2-apps/build-spec/debian/control.in
+++ b/t/recipes/checks/languages/python/python-python2-apps/build-spec/debian/control.in
@@ -8,7 +8,7 @@ Rules-Requires-Root: no
 
 Package: pkg-depends
 Architecture: all
-Depends: ${misc:Depends}, python
+Depends: ${misc:Depends}, python2
 Description: Test package with Python 2.x in Depends
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
@@ -32,7 +32,7 @@ Description: Test package with Python 2.x in Pre-Suggests
 Package: pkg-recommends
 Architecture: all
 Depends: ${misc:Depends}
-Recommends: python-dev
+Recommends: python2-dev
 Description: Test package with Python 2.x in Recommends
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
@@ -44,7 +44,7 @@ Description: Test package with Python 2.x in Recommends
 Package: pkg-suggests
 Architecture: all
 Depends: ${misc:Depends}
-Suggests: python, python2.7
+Suggests: python2, python2.7
 Description: Test package with Python 2.x in Suggests
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
@@ -55,7 +55,7 @@ Description: Test package with Python 2.x in Suggests
 
 Package: python-[% $source %]
 Architecture: all
-Depends: ${misc:Depends}, python
+Depends: ${misc:Depends}, python2
 Description: Python 3 module with Python 3.x in Depends
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
@@ -77,7 +77,7 @@ Description: Test package (Python 3)
 
 Package: pkg-depends-any
 Architecture: all
-Depends: ${misc:Depends}, python:any
+Depends: ${misc:Depends}, python2:any
 Description: Test package with Python 2.x with :any suffix in Depends
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
