--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -1,57 +1,182 @@
 # -*- conf -*-
-# FIXME: the list of checks should probably be moved to
-# t/scripts/critic.pl. Line continuations are not supported here
+# the list of checks could perhaps be moved to t/scripts/critic.pl.
 
 verbose = 1
-# Severity is actually ignored for our main purposes, see below
+
+# severity is ignored for our main purposes, see below
 severity = 1
-# Work based on a whitelist
-only = 1
-# Our whitelist (ignores severity):
-include = ExplicitReturnUndef GlobFunction NegativeIndices PrivateVars ProhibitReusedNames UselessInitialization NumberSeparators NullStatements LongChainsOfMethodCalls UseStrict UseWarnings EndWithOne ConditionalUseStatements PackageMatchesPodName JoinedReadline UnreachableCode TrailingWhitespace InterpolationOfLiterals ImplicitNewlines CommaSeparatedStatements UnusedVariables UnusedCapture TwoArgOpen ProhibitHardTabs MismatchedOperators IndirectSyntax Modules:: BuiltinFunctions:: ClassHierarchies:: CommaSeparatedStatements QuotesAsQuotelikeOperatorDelimiters MixedBooleanOperators ProhibitBarewordFileHandles ConditionalUseStatements Modules::ProhibitAutomaticExportation ProhibitBarewordFileHandles ConditionalDeclarations Tidy
-#include = MixedBooleanOperators InteractiveTest UpperCaseHeredoc ReusedNames PackageVars ConditionalDeclarations SingleCharAlternation FixedStringMatches ConditionalUseStatements QuotedWordLists
-
-exclude = RequireFilenameMatchesPackage RequireVersionVar ProhibitExcessMainComplexity ProhibitStringySplit ComplexMappings StringyEval Documentation::PodSpell BuiltinFunctions::ProhibitUselessTopic MatchVars
-
-# If you want to try some other stuff, uncomment the following
-# (exclude is an incomplete list of things we probably won't change)
-# theme = security || bugs || complexity || maintenance
-# exclude = ExtendedFormat LineBoundaryMatch DotMatchAnything BuiltinHomonyms InitializationForLocalVars UnusualDelimiters
-# even more stuff if theme is empty
-
-# Would be nice to fix at some point:
-# include = ProhibitBarewordFileHandles
 
 criticism-fatal = 1
 color = 1
 allow-unsafe = 1
 
+# to try some other stuff, uncomment the following
+# theme = security || bugs || complexity || maintenance
+
+# use a whitelist; the disabling config blocks below are for documentation only
+only = 1
+
+# use separate blocks below instead of long Lines in include
+include =
+
 [BuiltinFunctions::ProhibitBooleanGrep]
+
+[-BuiltinFunctions::ProhibitComplexMappings]
+
+[BuiltinFunctions::ProhibitLvalueSubstr]
+
+[BuiltinFunctions::ProhibitReverseSortBlock]
+
+[BuiltinFunctions::ProhibitShiftRef]
+
+[BuiltinFunctions::ProhibitSleepViaSelect]
+
+[-BuiltinFunctions::ProhibitStringyEval]
+
+[-BuiltinFunctions::ProhibitStringySplit]
+
+[BuiltinFunctions::ProhibitUniversalCan]
+
+[BuiltinFunctions::ProhibitUniversalIsa]
+
+[-BuiltinFunctions::ProhibitUselessTopic]
+
+[BuiltinFunctions::ProhibitVoidGrep]
+
+[BuiltinFunctions::ProhibitVoidMap]
+
+[BuiltinFunctions::RequireBlockGrep]
+
+[BuiltinFunctions::RequireBlockMap]
+
+[BuiltinFunctions::RequireGlobFunction]
+
+[BuiltinFunctions::RequireSimpleSortBlock]
+
+[ClassHierarchies::ProhibitAutoloading]
+
+[ClassHierarchies::ProhibitExplicitISA]
+
+[ClassHierarchies::ProhibitOneArgBless]
+
+[CodeLayout::ProhibitHardTabs]
+
+[-CodeLayout::ProhibitQuotedWordLists]
+
+[CodeLayout::ProhibitTrailingWhitespace]
+
+[CodeLayout::RequireTidyCode]
+
+[ControlStructures::ProhibitUnreachableCode]
+
+[-Documentation::PodSpelling]
+
+[Documentation::RequirePackageMatchesPodName]
+
+[InputOutput::ProhibitBarewordFileHandles]
+
+[-InputOutput::ProhibitInteractiveTest]
+
+[InputOutput::ProhibitJoinedReadline]
+
+[InputOutput::ProhibitTwoArgOpen]
 
 [InputOutput::RequireCheckedSyscalls]
 functions = open opendir chdir read readdir readline closedir sysopen sysread sysclose mkdir link pipe readlink unlink rename symlink fork
-# possible TODO close
+# possible TODO: close
 
-# Checks and collections blow up
+[Modules::ProhibitAutomaticExportation]
+
+[Modules::ProhibitConditionalUseStatements]
+
+[Modules::ProhibitEvilModules]
+
+[-Modules::ProhibitExcessMainComplexity]
+# Maybe some day...
+
+[Modules::ProhibitMultiplePackages]
+
+[Modules::RequireBarewordIncludes]
+
+[Modules::RequireEndWithOne]
+
+[Modules::RequireExplicitPackage]
+
 [-Modules::RequireFilenameMatchesPackage]
+# checks and collections blow up
+
+[Modules::RequireNoMatchVarsWithUseEnglish]
+
+[-Modules::RequireVersionVar]
 # We don't use package versions atm and even if we did, it probably
 # won't have full coverage anyway.
-[-Modules::RequireVersionVar]
-# Maybe some day...
-[-Modules::ProhibitExcessMainComplexity]
+
+[Objects::ProhibitIndirectSyntax]
+
+[-RegularExpressions::ProhibitFixedStringMatches]
+
+[-RegularExpressions::ProhibitSingleCharAlternation]
+
+[RegularExpressions::ProhibitUnusedCapture]
+
+[-RegularExpressions::ProhibitUnusualDelimiters]
+
+[-RegularExpressions::RequireDotMatchAnything]
+
+[-RegularExpressions::RequireExtendedFormatting]
+
+[-RegularExpressions::RequireLineBoundaryMatching]
+
+[-Subroutines::ProhibitBuiltinHomonyms]
+
+[Subroutines::ProhibitExplicitReturnUndef]
 
 [Subroutines::RequireFinalReturn]
 terminal_funcs = CORE::exec fatal_error internal_error Lintian::Util::internal_error Die error
 
-[ValuesAndExpressions::ProhibitInterpolationOfLiterals]
+[TestingAndDebugging::RequireUseStrict]
+
+[TestingAndDebugging::RequireUseWarnings]
 
 [ValuesAndExpressions::ProhibitCommaSeparatedStatements]
 allow_last_statement_to_be_comma_separated_in_map_and_grep = 1
 
 [-ValuesAndExpressions::ProhibitConstantPragma]
 
-# Requires "use English" and our style is against that.
+[ValuesAndExpressions::ProhibitImplicitNewlines]
+
+[ValuesAndExpressions::ProhibitInterpolationOfLiterals]
+
+[ValuesAndExpressions::ProhibitLongChainsOfMethodCalls]
+
+[ValuesAndExpressions::ProhibitMismatchedOperators]
+
+[ValuesAndExpressions::ProhibitMixedBooleanOperators]
+
+[ValuesAndExpressions::ProhibitQuotesAsQuotelikeOperatorDelimiters]
+
+[ValuesAndExpressions::RequireNumberSeparators]
+
+[-ValuesAndExpressions::RequireUpperCaseHeredocTerminator]
+
+[Variables::ProhibitConditionalDeclarations]
+
 [-Variables::ProhibitPunctuationVars]
+# Requires "use English" and our style is against that.
+
+[-Variables::ProhibitMatchVars]
+
+[-Variables::ProhibitPackageVars]
+
+[Variables::ProhibitReusedNames]
+
+[Variables::ProhibitUnusedVariables]
+
+[Variables::ProtectPrivateVars]
+
+[-Variables::RequireInitializationForLocalVars]
 
 [Variables::RequireLocalizedPunctuationVars]
 allow = %ENV %SIG $! $? $0
+
+[Variables::RequireNegativeIndices]
