Implement the perlcritic policy Variables::ProhibitPackageVars.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -164,7 +164,7 @@ allow_last_statement_to_be_comma_separated_in_map_and_grep = 1
 [-Variables::ProhibitPunctuationVars]
 # Requires "use English" and our style is against that.
 
-[-Variables::ProhibitMatchVars]
+[Variables::ProhibitMatchVars]
 
 [-Variables::ProhibitPackageVars]
 
