Implement the perlcritic policy ValuesAndExpressions::RequireUpperCaseHeredocTerminator.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -157,7 +157,7 @@ allow_last_statement_to_be_comma_separated_in_map_and_grep = 1
 
 [ValuesAndExpressions::RequireNumberSeparators]
 
-[-ValuesAndExpressions::RequireUpperCaseHeredocTerminator]
+[ValuesAndExpressions::RequireUpperCaseHeredocTerminator]
 
 [Variables::ProhibitConditionalDeclarations]
 
