Implement the perlcritic policy InputOutput::ProhibitInteractiveTest.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -75,7 +75,7 @@ include =
 
 [InputOutput::ProhibitBarewordFileHandles]
 
-[-InputOutput::ProhibitInteractiveTest]
+[InputOutput::ProhibitInteractiveTest]
 
 [InputOutput::ProhibitJoinedReadline]
 
