--- a/debian/control
+++ b/debian/control
@@ -46,6 +46,7 @@ Depends:
  libfile-find-rule-perl,
  libfont-ttf-perl,
  libhtml-html5-entities-perl,
+ libio-interactive-perl,
  libipc-run3-perl,
  libjson-maybexs-perl,
  liblist-compare-perl,
