Add libperl-critic-freenode-perl to d/tests/control.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -119,6 +119,58 @@ include =
 
 [Documentation::RequirePackageMatchesPodName]
 
+[-Freenode::AmpersandSubCalls]
+
+[-Freenode::ArrayAssignAref]
+
+[-Freenode::BarewordFilehandles]
+
+[-Freenode::ConditionalDeclarations]
+
+[-Freenode::ConditionalImplicitReturn]
+
+[-Freenode::DeprecatedFeatures]
+
+[-Freenode::DiscouragedModules]
+
+[-Freenode::DollarAB]
+
+[-Freenode::Each]
+
+[-Freenode::EmptyReturn]
+
+[-Freenode::IndirectObjectNotation]
+
+[-Freenode::LexicalForeachIterator]
+
+[-Freenode::LoopOnHash]
+
+[-Freenode::ModPerl]
+
+[-Freenode::MultidimensionalArrayEmulation]
+
+[-Freenode::OpenArgs]
+
+[-Freenode::OverloadOptions]
+
+[-Freenode::PackageMatchesFilename]
+
+[-Freenode::POSIXImports]
+
+[-Freenode::PreferredAlternatives]
+
+[-Freenode::Prototypes]
+
+[-Freenode::StrictWarnings]
+
+[-Freenode::Threads]
+
+[-Freenode::Wantarray]
+
+[-Freenode::WarningsSwitch]
+
+[-Freenode::WhileDiamondDefaultAssignment]
+
 [InputOutput::ProhibitBarewordFileHandles]
 
 [InputOutput::ProhibitInteractiveTest]
