Implement the perlcritic policy Freenode::AmpersandSubCalls.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -119,7 +119,7 @@ include =
 
 [Documentation::RequirePackageMatchesPodName]
 
-[-Freenode::AmpersandSubCalls]
+[Freenode::AmpersandSubCalls]
 
 [-Freenode::ArrayAssignAref]
 
