--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -123,7 +123,7 @@ include =
 
 [Freenode::ArrayAssignAref]
 
-[-Freenode::BarewordFilehandles]
+[Freenode::BarewordFilehandles]
 
 [-Freenode::ConditionalDeclarations]
 
