Implement the perlcritic policy Freenode::ArrayAssignAref.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -121,7 +121,7 @@ include =
 
 [Freenode::AmpersandSubCalls]
 
-[-Freenode::ArrayAssignAref]
+[Freenode::ArrayAssignAref]
 
 [-Freenode::BarewordFilehandles]
 
