--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -125,7 +125,7 @@ include =
 
 [Freenode::BarewordFilehandles]
 
-[-Freenode::ConditionalDeclarations]
+[Freenode::ConditionalDeclarations]
 
 [-Freenode::ConditionalImplicitReturn]
 
