Implement the perlcritic policy Freenode::ConditionalImplicitReturn.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -127,7 +127,7 @@ include =
 
 [Freenode::ConditionalDeclarations]
 
-[-Freenode::ConditionalImplicitReturn]
+[Freenode::ConditionalImplicitReturn]
 
 [-Freenode::DeprecatedFeatures]
 
