Implement the perlcritic policy Freenode::DiscouragedModules.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -131,7 +131,7 @@ include =
 
 [Freenode::DeprecatedFeatures]
 
-[-Freenode::DiscouragedModules]
+[Freenode::DiscouragedModules]
 
 [-Freenode::DollarAB]
 
