--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -237,7 +237,7 @@ functions = open opendir chdir read readdir readline closedir sysopen sysread sy
 
 [Subroutines::ProhibitBuiltinHomonyms]
 
-[Subroutines::ProhibitExplicitReturnUndef]
+[-Subroutines::ProhibitExplicitReturnUndef]
 
 [Subroutines::RequireFinalReturn]
 terminal_funcs = CORE::exec fatal_error internal_error Lintian::Util::internal_error Die error
