Implement the perlcritic policy Freenode::OverloadOptions.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -151,7 +151,7 @@ include =
 
 [Freenode::OpenArgs]
 
-[-Freenode::OverloadOptions]
+[Freenode::OverloadOptions]
 
 [-Freenode::PackageMatchesFilename]
 
