--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -257,7 +257,7 @@ terminal_funcs = CORE::exec fatal_error internal_error Lintian::Util::internal_e
 [-ValuesAndExpressions::ProhibitArrayAssignAref]
 # not needed with Freenode::ArrayAssignAref
 
-[-ValuesAndExpressions::ProhibitBarewordDoubleColon]
+[ValuesAndExpressions::ProhibitBarewordDoubleColon]
 
 [ValuesAndExpressions::ProhibitCommaSeparatedStatements]
 allow_last_statement_to_be_comma_separated_in_map_and_grep = 1
