--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -264,7 +264,7 @@ allow_last_statement_to_be_comma_separated_in_map_and_grep = 1
 
 [-ValuesAndExpressions::ProhibitConstantPragma]
 
-[-ValuesAndExpressions::ProhibitDuplicateHashKeys]
+[ValuesAndExpressions::ProhibitDuplicateHashKeys]
 
 [-ValuesAndExpressions::ProhibitEmptyCommas]
 
