Implement the perlcritic policy ValuesAndExpressions::ProhibitEmptyCommas.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -266,7 +266,7 @@ allow_last_statement_to_be_comma_separated_in_map_and_grep = 1
 
 [ValuesAndExpressions::ProhibitDuplicateHashKeys]
 
-[-ValuesAndExpressions::ProhibitEmptyCommas]
+[ValuesAndExpressions::ProhibitEmptyCommas]
 
 [-ValuesAndExpressions::ProhibitFiletest_f]
 
