--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -268,7 +268,7 @@ allow_last_statement_to_be_comma_separated_in_map_and_grep = 1
 
 [ValuesAndExpressions::ProhibitEmptyCommas]
 
-[-ValuesAndExpressions::ProhibitFiletest_f]
+[ValuesAndExpressions::ProhibitFiletest_f]
 
 [ValuesAndExpressions::ProhibitImplicitNewlines]
 
