--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -292,7 +292,7 @@ allow_last_statement_to_be_comma_separated_in_map_and_grep = 1
 
 [ValuesAndExpressions::RequireUpperCaseHeredocTerminator]
 
-[-ValuesAndExpressions::UnexpandedSpecialLiteral]
+[ValuesAndExpressions::UnexpandedSpecialLiteral]
 
 [Variables::ProhibitConditionalDeclarations]
 
