--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -284,7 +284,7 @@ allow_last_statement_to_be_comma_separated_in_map_and_grep = 1
 
 [ValuesAndExpressions::ProhibitQuotesAsQuotelikeOperatorDelimiters]
 
-[-ValuesAndExpressions::ProhibitUnknownBackslash]
+[ValuesAndExpressions::ProhibitUnknownBackslash]
 
 [ValuesAndExpressions::RequireNumberSeparators]
 
