--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -91,7 +91,7 @@ include =
 
 [-Documentation::PodSpelling]
 
-[-Documentation::ProhibitUnbalancedParens]
+[Documentation::ProhibitUnbalancedParens]
 
 [-Documentation::ProhibitAdjacentLinks]
 
