Implement the perlcritic policy Documentation::ProhibitDuplicateHeadings.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -95,7 +95,7 @@ include =
 
 [-Documentation::ProhibitAdjacentLinks]
 
-[-Documentation::ProhibitDuplicateHeadings]
+[Documentation::ProhibitDuplicateHeadings]
 
 [-Documentation::ProhibitDuplicateSeeAlso]
 
