--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -105,7 +105,7 @@ include =
 
 [Documentation::ProhibitParagraphEndComma]
 
-[-Documentation::ProhibitParagraphTwoDots]
+[Documentation::ProhibitParagraphTwoDots]
 
 [-Documentation::ProhibitVerbatimMarkup]
 
