Implement the perlcritic policy Documentation::ProhibitLinkToSelf.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -99,7 +99,7 @@ include =
 
 [-Documentation::ProhibitBadAproposMarkup]
 
-[-Documentation::ProhibitLinkToSelf]
+[Documentation::ProhibitLinkToSelf]
 
 [Documentation::ProhibitParagraphEndComma]
 
