Implement the perlcritic policy Documentation::ProhibitBadAproposMarkup.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -97,7 +97,7 @@ include =
 
 [Documentation::ProhibitDuplicateSeeAlso]
 
-[-Documentation::ProhibitBadAproposMarkup]
+[Documentation::ProhibitBadAproposMarkup]
 
 [Documentation::ProhibitLinkToSelf]
 
