--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -65,9 +65,13 @@ include =
 
 [CodeLayout::ProhibitHardTabs]
 
+[-CodeLayout::ProhibitParensWithBuiltins]
+
 [CodeLayout::ProhibitQuotedWordLists]
 
 [CodeLayout::ProhibitTrailingWhitespace]
+
+[-CodeLayout::RequireConsistentNewlines]
 
 [-CodeLayout::RequireFinalSemicolon]
 
@@ -75,7 +79,29 @@ include =
 
 [-CodeLayout::RequireTrailingCommaAtNewline]
 
+[-CodeLayout::RequireTrailingCommas]
+
+[-ControlStructures::ProhibitCStyleForLoops]
+
+[-ControlStructures::ProhibitCascadingIfElse]
+
+[-ControlStructures::ProhibitDeepNests]
+
+[-ControlStructures::ProhibitLabelsWithSpecialBlockNames]
+
+[-ControlStructures::ProhibitMutatingListFunctions]
+
+[-ControlStructures::ProhibitNegativeExpressionsInUnlessAndUntilConditions]
+
+[-ControlStructures::ProhibitPostfixControls]
+
+[-ControlStructures::ProhibitUnlessBlocks]
+
 [ControlStructures::ProhibitUnreachableCode]
+
+[-ControlStructures::ProhibitUntilBlocks]
+
+[-ControlStructures::ProhibitYadaOperator]
 
 [-Compatibility::ConstantPragmaHash]
 
@@ -118,6 +144,14 @@ include =
 [-Documentation::RequireLinkedURLs]
 
 [Documentation::RequirePackageMatchesPodName]
+
+[-Documentation::RequirePodAtEnd]
+
+[-Documentation::RequirePodSections]
+
+[-ErrorHandling::RequireCarping]
+
+[-ErrorHandling::RequireCheckingReturnValueOfEval]
 
 [Freenode::AmpersandSubCalls]
 
@@ -171,18 +205,44 @@ include =
 
 [-Freenode::WhileDiamondDefaultAssignment]
 
+[-InputOutput::ProhibitBacktickOperators]
+
 [InputOutput::ProhibitBarewordFileHandles]
+
+[-InputOutput::ProhibitExplicitStdin]
 
 [InputOutput::ProhibitInteractiveTest]
 
 [InputOutput::ProhibitJoinedReadline]
 
+[-InputOutput::ProhibitOneArgSelect]
+
+[-InputOutput::ProhibitReadlineInForLoop]
+
 [-InputOutput::ProhibitTwoArgOpen]
 # not needed with Freenode::OpenArgs
+
+[-InputOutput::RequireBracedFileHandleWithPrint]
+
+[-InputOutput::RequireBriefOpen]
+
+[-InputOutput::RequireCheckedClose]
+
+[-InputOutput::RequireCheckedOpen]
 
 [InputOutput::RequireCheckedSyscalls]
 functions = open opendir chdir read readdir readline closedir sysopen sysread sysclose mkdir link pipe readlink unlink rename symlink fork
 # possible TODO: close
+
+[-InputOutput::RequireEncodingWithUTF8Layer]
+
+[-Miscellanea::ProhibitFormats]
+
+[-Miscellanea::ProhibitTies]
+
+[-Miscellanea::ProhibitUnrestrictedNoCritic]
+
+[-Miscellanea::ProhibitUselessNoCritic]
 
 [-Miscellanea::TextDomainPlaceholders]
 
@@ -213,7 +273,7 @@ functions = open opendir chdir read readdir readline closedir sysopen sysread sy
 [Modules::RequireExplicitPackage]
 
 [-Modules::RequireFilenameMatchesPackage]
-# checks and collections blow up
+# not needed with Freenode::PackageMatchesFilename
 
 [Modules::RequireNoMatchVarsWithUseEnglish]
 
@@ -221,7 +281,21 @@ functions = open opendir chdir read readdir readline closedir sysopen sysread sy
 # We don't use package versions atm and even if we did, it probably
 # won't have full coverage anyway.
 
+[-NamingConventions::Capitalization]
+
+[-NamingConventions::ProhibitAmbiguousNames]
+
 [Objects::ProhibitIndirectSyntax]
+
+[-References::ProhibitDoubleSigils]
+
+[-RegularExpressions::ProhibitCaptureWithoutTest]
+
+[-RegularExpressions::ProhibitComplexRegexes]
+
+[-RegularExpressions::ProhibitEnumeratedClasses]
+
+[-RegularExpressions::ProhibitEscapedMetacharacters]
 
 [RegularExpressions::ProhibitFixedStringMatches]
 
@@ -231,18 +305,48 @@ functions = open opendir chdir read readdir readline closedir sysopen sysread sy
 
 [RegularExpressions::ProhibitUnusualDelimiters]
 
+[-RegularExpressions::ProhibitUselessTopic]
+
+[-RegularExpressions::RequireBracesForMultiline]
+
 [-RegularExpressions::RequireDotMatchAnything]
 
 [-RegularExpressions::RequireExtendedFormatting]
 
 [-RegularExpressions::RequireLineBoundaryMatching]
 
+[-Subroutines::ProhibitAmpersandSigils]
+
 [Subroutines::ProhibitBuiltinHomonyms]
+
+[-Subroutines::ProhibitExcessComplexity]
 
 [-Subroutines::ProhibitExplicitReturnUndef]
 
+[-Subroutines::ProhibitManyArgs]
+
+[-Subroutines::ProhibitNestedSubs]
+
+[-Subroutines::ProhibitReturnSort]
+
+[-Subroutines::ProhibitSubroutinePrototypes]
+
+[-Subroutines::ProhibitUnusedPrivateSubroutines]
+
+[-Subroutines::ProtectPrivateSubs]
+
+[-Subroutines::RequireArgUnpacking]
+
 [Subroutines::RequireFinalReturn]
 terminal_funcs = CORE::exec fatal_error internal_error Lintian::Util::internal_error Die error
+
+[-TestingAndDebugging::ProhibitNoStrict]
+
+[-TestingAndDebugging::ProhibitNoWarnings]
+
+[-TestingAndDebugging::ProhibitProlongedStrictureOverride]
+
+[-TestingAndDebugging::RequireTestLabels]
 
 [-TestingAndDebugging::RequireUseStrict]
 # not needed with Freenode::StrictWarnings]
@@ -261,11 +365,17 @@ terminal_funcs = CORE::exec fatal_error internal_error Lintian::Util::internal_e
 
 [ValuesAndExpressions::ProhibitCommaSeparatedStatements]
 
+[-ValuesAndExpressions::ProhibitComplexVersion]
+
 [-ValuesAndExpressions::ProhibitConstantPragma]
 
 [ValuesAndExpressions::ProhibitDuplicateHashKeys]
 
 [ValuesAndExpressions::ProhibitEmptyCommas]
+
+[-ValuesAndExpressions::ProhibitEmptyQuotes]
+
+[-ValuesAndExpressions::ProhibitEscapedCharacters]
 
 [ValuesAndExpressions::ProhibitFiletest_f]
 
@@ -273,34 +383,58 @@ terminal_funcs = CORE::exec fatal_error internal_error Lintian::Util::internal_e
 
 [ValuesAndExpressions::ProhibitInterpolationOfLiterals]
 
+[-ValuesAndExpressions::ProhibitLeadingZeros]
+
 [ValuesAndExpressions::ProhibitLongChainsOfMethodCalls]
+
+[-ValuesAndExpressions::ProhibitMagicNumbers]
 
 [ValuesAndExpressions::ProhibitMismatchedOperators]
 
 [ValuesAndExpressions::ProhibitMixedBooleanOperators]
 
+[-ValuesAndExpressions::ProhibitNoisyQuotes]
+
 [ValuesAndExpressions::ProhibitNullStatements]
 
 [ValuesAndExpressions::ProhibitQuotesAsQuotelikeOperatorDelimiters]
 
+[-ValuesAndExpressions::ProhibitSpecialLiteralHeredocTerminator]
+
 [ValuesAndExpressions::ProhibitUnknownBackslash]
+
+[-ValuesAndExpressions::ProhibitVersionStrings]
+
+[-ValuesAndExpressions::RequireConstantVersion]
+
+[-ValuesAndExpressions::RequireInterpolationOfMetachars]
 
 [ValuesAndExpressions::RequireNumberSeparators]
 
 [-ValuesAndExpressions::RequireNumericVersion]
 
+[-ValuesAndExpressions::RequireQuotedHeredocTerminator]
+
 [ValuesAndExpressions::RequireUpperCaseHeredocTerminator]
 
 [ValuesAndExpressions::UnexpandedSpecialLiteral]
 
+[-Variables::ProhibitAugmentedAssignmentInDeclaration]
+
 [Variables::ProhibitConditionalDeclarations]
 
-[-Variables::ProhibitPunctuationVars]
-# Requires "use English" and our style is against that.
+[-Variables::ProhibitEvilVariables]
+
+[-Variables::ProhibitLocalVars]
 
 [Variables::ProhibitMatchVars]
 
 [-Variables::ProhibitPackageVars]
+
+[-Variables::ProhibitPerl4PackageNames]
+
+[-Variables::ProhibitPunctuationVars]
+# Requires "use English" and our style is against that.
 
 [Variables::ProhibitReusedNames]
 
@@ -309,6 +443,8 @@ terminal_funcs = CORE::exec fatal_error internal_error Lintian::Util::internal_e
 [Variables::ProtectPrivateVars]
 
 [Variables::RequireInitializationForLocalVars]
+
+[-Variables::RequireLexicalLoopIterators]
 
 [Variables::RequireLocalizedPunctuationVars]
 allow = %ENV %SIG $! $? $0
