Implement the perlcritic policy ControlStructures::ProhibitUntilBlocks.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -99,7 +99,7 @@ include =
 
 [ControlStructures::ProhibitUnreachableCode]
 
-[-ControlStructures::ProhibitUntilBlocks]
+[ControlStructures::ProhibitUntilBlocks]
 
 [-ControlStructures::ProhibitYadaOperator]
 
