Use IO::Prompt::Tiny when reading interactive input from users.
Satisfies the perlcritic policy InputOutput::ProhibitExplicitStdin in
places where it made sense, but not yet everywhere.

--- a/debian/control
+++ b/debian/control
@@ -47,6 +47,7 @@ Depends:
  libfont-ttf-perl,
  libhtml-html5-entities-perl,
  libio-interactive-perl,
+ libio-prompt-tiny--perl,
  libipc-run3-perl,
  libjson-maybexs-perl,
  liblist-compare-perl,
