--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -217,7 +217,7 @@ include =
 
 [-InputOutput::ProhibitOneArgSelect]
 
-[-InputOutput::ProhibitReadlineInForLoop]
+[InputOutput::ProhibitReadlineInForLoop]
 
 [-InputOutput::ProhibitTwoArgOpen]
 # not needed with Freenode::OpenArgs
