--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -337,7 +337,7 @@ functions = open opendir chdir read readdir readline closedir sysopen sysread sy
 
 [Subroutines::ProtectPrivateSubs]
 
-[-Subroutines::RequireArgUnpacking]
+[Subroutines::RequireArgUnpacking]
 
 [Subroutines::RequireFinalReturn]
 terminal_funcs = CORE::exec fatal_error internal_error Lintian::Util::internal_error Die error
