Implement the perlcritic policy Variables::ProhibitAugmentedAssignmentInDeclaration.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -421,7 +421,7 @@ terminal_funcs = CORE::exec fatal_error internal_error Lintian::Util::internal_e
 
 [ValuesAndExpressions::UnexpandedSpecialLiteral]
 
-[-Variables::ProhibitAugmentedAssignmentInDeclaration]
+[Variables::ProhibitAugmentedAssignmentInDeclaration]
 
 [Variables::ProhibitConditionalDeclarations]
 
