Implement the perlcritic policy ValuesAndExpressions::RequireQuotedHeredocTerminator.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -415,7 +415,7 @@ terminal_funcs = CORE::exec fatal_error internal_error Lintian::Util::internal_e
 
 [-ValuesAndExpressions::RequireNumericVersion]
 
-[-ValuesAndExpressions::RequireQuotedHeredocTerminator]
+[ValuesAndExpressions::RequireQuotedHeredocTerminator]
 
 [ValuesAndExpressions::RequireUpperCaseHeredocTerminator]
 
