--- a/debian/control
+++ b/debian/control
@@ -48,7 +48,7 @@ Depends:
  libfont-ttf-perl,
  libhtml-html5-entities-perl,
  libio-interactive-perl,
- libio-prompt-tiny--perl,
+ libio-prompt-tiny-perl,
  libipc-run3-perl,
  libjson-maybexs-perl,
  liblist-compare-perl,
