--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,7 @@ Uploaders:
 Build-Depends:
  debhelper-compat (= 13),
  dpkg (>= 1.17.14),
+ libconst-fast-perl,
  libfile-basedir-perl,
  libipc-run3-perl,
  libpath-tiny-perl,
