Implement the perlcritic policy ControlStructures::ProhibitMutatingListFunctions.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -89,7 +89,7 @@ include =
 
 [ControlStructures::ProhibitLabelsWithSpecialBlockNames]
 
-[-ControlStructures::ProhibitMutatingListFunctions]
+[ControlStructures::ProhibitMutatingListFunctions]
 
 [-ControlStructures::ProhibitNegativeExpressionsInUnlessAndUntilConditions]
 
