--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -287,7 +287,7 @@ functions = open opendir chdir read readdir readline closedir sysopen sysread sy
 
 [Objects::ProhibitIndirectSyntax]
 
-[-References::ProhibitDoubleSigils]
+[References::ProhibitDoubleSigils]
 
 [-RegularExpressions::ProhibitCaptureWithoutTest]
 
