--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -342,7 +342,7 @@ functions = open opendir chdir read readdir readline closedir sysopen sysread sy
 [Subroutines::RequireFinalReturn]
 terminal_funcs = CORE::exec fatal_error internal_error Lintian::Util::internal_error Die error
 
-[-TestingAndDebugging::ProhibitNoStrict]
+[TestingAndDebugging::ProhibitNoStrict]
 
 [-TestingAndDebugging::ProhibitNoWarnings]
 
