Implement the perlcritic policy Variables::ProhibitPackageVars.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -431,7 +431,8 @@ terminal_funcs = CORE::exec fatal_error internal_error Lintian::Util::internal_e
 
 [Variables::ProhibitMatchVars]
 
-[-Variables::ProhibitPackageVars]
+[Variables::ProhibitPackageVars]
+add_packages = Devel::Size Module::CoreList Text::Glob Text::Wrap YAML::XS
 
 [Variables::ProhibitPerl4PackageNames]
 
