--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -304,10 +304,12 @@ functions = open opendir chdir read readdir readline closedir sysopen sysread sy
 [RegularExpressions::ProhibitUnusedCapture]
 
 [RegularExpressions::ProhibitUnusualDelimiters]
+allow_all_brackets = 1
 
 [-RegularExpressions::ProhibitUselessTopic]
 
-[-RegularExpressions::RequireBracesForMultiline]
+[RegularExpressions::RequireBracesForMultiline]
+allow_all_brackets = 1
 
 [-RegularExpressions::RequireDotMatchAnything]
 
