--- a/debian/control
+++ b/debian/control
@@ -93,6 +93,7 @@ Suggests:
  libtext-template-perl,
 Breaks:
  funny-manpages (<< 1.3-5.1),
+ lintian-brush (<< 0.88),
  pkg-js-tools (<< 0.9.4),
  pkg-perl-tools (<< 0.53),
 Replaces:
