Implement the perlcritic policy ControlStructures::ProhibitNegativeExpressionsInUnlessAndUntilConditions.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -91,7 +91,7 @@ include =
 
 [ControlStructures::ProhibitMutatingListFunctions]
 
-[-ControlStructures::ProhibitNegativeExpressionsInUnlessAndUntilConditions]
+[ControlStructures::ProhibitNegativeExpressionsInUnlessAndUntilConditions]
 
 [-ControlStructures::ProhibitPostfixControls]
 
