Do not generate documentation from checks (restore previous behavior to fix a CI issue).
Restores the behavior from before checks were moved in hope of fixing
the Salsa CI failure.

As a side note, we should probably enable the POD requirement in
checks, and also generate and ship the resulting documentation.

Gbp-Dch: ignore

--- a/debian/rules
+++ b/debian/rules
@@ -57,7 +57,7 @@ generate-docs-stamp: $(docsources)
 		BASENAME=$$(basename "$$POD" .pod) ; \
 		$(pod2man) --section=1 "$$POD" > "man/man1/$$BASENAME".1 ; \
 	done
-	set -e ; for POD in $$(find doc/tutorial lib/Lintian lib/Test -type f '!' -path '*/Internal/*' '!' -path '*/Output/*' '!' -path '*/Tag/TextUtil.pm'  ) ; do \
+	set -e ; for POD in $$(find doc/tutorial lib/Lintian lib/Test -type f '!' -path '*/Output/*' '!' -path '*/Check/*'  ) ; do \
 		BASENAME=$$(echo "$$POD" | perl -pe 's@^(doc/tutorial|lib)/@@; s@/@::@g; s/\.(pod|pm)$$//') ; \
 		$(pod2man) --name="$$BASENAME" --section=3 "$$POD" > "man/man3/$$BASENAME".3 ; \
 	done
