--- a/t/recipes/checks/fields/dm-upload-allowed/legacy-foo++/build-spec/debian/control
+++ b/t/recipes/checks/fields/dm-upload-allowed/legacy-foo++/build-spec/debian/control
@@ -16,7 +16,7 @@ Description: see how lintian reacts to plus signs in the package name
  Regression test to see if lintian tests work on a package with plus signs in
  its name.
  .
- This description also uses non-UTF8 high bytes chars: ÄÖÜß
+ This description uses only UTF-8 high bytes chars.
 
 Package: foo++-helper
 Architecture: all
