Implement the perlcritic policy ValuesAndExpressions::ProhibitLeadingZeros.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -387,7 +387,7 @@ terminal_funcs = CORE::exec fatal_error internal_error Lintian::Util::internal_e
 
 [ValuesAndExpressions::ProhibitInterpolationOfLiterals]
 
-[-ValuesAndExpressions::ProhibitLeadingZeros]
+[ValuesAndExpressions::ProhibitLeadingZeros]
 
 [ValuesAndExpressions::ProhibitLongChainsOfMethodCalls]
 
