Adopt the perlcritic policy ControlStructures::ProhibitYadaOperator.

--- a/.perlcriticrc
+++ b/.perlcriticrc
@@ -101,7 +101,7 @@ include =
 
 [ControlStructures::ProhibitUntilBlocks]
 
-[-ControlStructures::ProhibitYadaOperator]
+[ControlStructures::ProhibitYadaOperator]
 
 [-Compatibility::ConstantPragmaHash]
 
